Thu Mar 06 12:45:01 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsodbc.h src/odbc/odbc.c:
	- remove some memory leak

Thu Mar 06 12:26:30 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/ct.c: cleanup
	* src/tds/convert.c: 
	- fix of yesterday fix (I shouldn't code so late...)

Wed Mar 05 20:36:34 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/convert.c:
	- revert data compute and add fix for '' -> Jan 01 1900

Wed Mar 05 09:18:02 EST 2003  Mark Lilback <mark@lilback.com>
	* src/ctlib/ct.c: ct_param returns CS_FAIL for non-rpc cases
	* src/Makefile.am configure.in: added options to disable apps, server, pool

Wed Mar 05 14:11:17 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/unittests/rpc_ct_setparam.c (added):
	* src/ctlib/unittests/rpc_ct_param.c (added):
	* src/ctlib/unittests/array_bind.c (added):
	* include/cspublic.h include/ctpublic.h:
	* src/ctlib/cs.c src/ctlib/ct.c src/dblib/rpc.c:
	* src/tds/query.c:
	- applied Bill Thompson patch
	* src/tds/convert.c: fix some issue with win32

Wed Mar 05 11:12:59 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h: declare function

Wed Mar 05 10:45:52 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/dblib.c src/odbc/prepare_query.c:
	* src/tds/convert.c src/tds/numeric.c src/tds/query.c:
	- remove some warnings

Tue Mar 04 17:51:40 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/dblib/dblib.c src/tds/convert.c:
	* src/tds/query.c src/tds/token.c:
	- merged Bill Thompson patch on dblib

Tue Mar 04 17:45:09 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/ctlib/ct.c src/tds/convert.c src/tds/token.c:
	- merged a part of Sybase patch

Tue Mar 04 11:43:15 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* src/tds/unittests/convert.c: spell fix

Mon Mar 03 22:19:31 CET 2003  Frediano Ziglio <freddy77@angelfire.com>
	* TODO: update
	* src/tds/unittests/convert.c: fix an error computing speed
